--- a/public/users/demo/demo.css
+++ b/public/users/demo/demo.css
@@ -59,3 +59,49 @@
   height: calc(100vh - 70px);
   margin-top: 70px;
 }
+
+/** Custom **/
+
+#store-products {
+  margin-top: 20px;
+}
+
+.products {
+  margin-bottom: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.products .image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  filter: grayscale(100%);
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.products .middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%)
+}
+
+.products:hover .image {
+  filter: unset;
+  opacity: 0.3;
+}
+
+.products:hover .middle {
+  opacity: 1;
+}
+
+.text {
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
+}
